fix footer contrast ratio

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -157,7 +157,7 @@ body {
     --bg-header: var(--spray-opaque);
     --bg-header-active: var(--spray);
     --bg-section: var(--skeptic);
-    --bg-section-dark: var(--wedgewood);
+    --bg-section-dark: var(--eden);
     --bg-section-light: var(--periwinkle-gray);
 
 
